--- a/in/index.html
+++ b/in/index.html
@@ -1,57 +1,64 @@
 <!doctype html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin Redirect</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{ --gold:#d5aa53; --gold2:#b88632; --brown:#6e4c1a; --bg:#0f1115; --card:#171a21; --muted:#9aa4b2; }
-    *{ box-sizing:border-box; }
-    body{ margin:0; font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial; background:linear-gradient(180deg,var(--bg),#0b0d11); color:#e6e6e6; }
-    .wrap{ max-width:980px; margin:40px auto; padding:0 16px; }
-    .title{ font-weight:700; font-size:28px; letter-spacing:.3px; }
-    .card{ background:linear-gradient(180deg,#1c2029,#141821); border:1px solid #232836; border-radius:18px; padding:18px; box-shadow:0 10px 30px rgba(0,0,0,.25); }
-    .btn{ border:0; border-radius:12px; padding:10px 14px; font-weight:600; cursor:pointer; background:linear-gradient(180deg,var(--gold),var(--gold2) 40%, var(--brown)); color:#121212; }
-    .btn:disabled{ opacity:.6; cursor:not-allowed; }
-    .row{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
-    input, .in{ background:#0f1116; border:1px solid #2a3142; color:#fff; border-radius:12px; padding:10px 12px; outline:none; }
-    input:focus{ border-color:#3a7bd5; }
-    table{ width:100%; border-collapse:collapse; margin-top:10px; }
-    th,td{ padding:10px; border-bottom:1px solid #232836; }
-    th{ text-align:left; color:#b6c0cf; font-weight:600; }
-    .muted{ color:var(--muted); font-size:13px; }
-    .tag{ display:inline-block; background:#0f1116; border:1px solid #2a3142; padding:2px 8px; border-radius:999px; font-size:12px; }
-    .top{ display:flex; justify-content:space-between; align-items:center; }
+    body {
+      font-family: system-ui, sans-serif;
+      background: #0f0f0f;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .box {
+      background: #161616;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,.5);
+      width: 320px;
+    }
+    h1 {
+      text-align: center;
+      color: #d5aa53;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 10px;
+      background: #222;
+      color: #fff;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background: linear-gradient(to bottom, #d5aa53, #b88632 40%, #6e4c1a);
+      border: none;
+      border-radius: 10px;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="top"><div class="title">Admin Redirect</div><div class="tag">/in</div></div>
-
-    <div id="login" class="card" style="margin-top:14px;">
-      <div class="row">
-        <input id="user" placeholder="Username" />
-        <input id="pass" type="password" placeholder="Password" />
-        <button class="btn" id="btnLogin">Login</button>
-      </div>
-      <div class="muted" style="margin-top:8px;">Gunakan kredensial admin yang di-set di Environment Variables.</div>
-    </div>
-
-    <div id="app" class="card" style="margin-top:14px; display:none;">
-      <div class="row">
-        <input id="newUrl" placeholder="https://…" class="in" style="flex:1;" />
-        <input id="newLabel" placeholder="Label (opsional)" class="in" style="width:240px;" />
-        <button class="btn" id="btnAdd">Tambah</button>
-      </div>
-      <table id="tbl">
-        <thead><tr><th>Label</th><th>URL</th><th style="width:160px;">Aksi</th></tr></thead>
-        <tbody></tbody>
-      </table>
-    </div>
+  <div class="box">
+    <h1>Admin Redirect</h1>
+    <input type="text" id="user" placeholder="Username" value="admin">
+    <input type="password" id="pass" placeholder="Password" value="">
+    <button id="btnLogin">Login</button>
+    <p style="margin-top:10px;font-size:13px;color:#aaa;text-align:center">
+      Gunakan kredensial admin yang di-set di Environment Variables.
+    </p>
   </div>
-  <script src="/in/admin.js" type="module"></script>
+
+  <script src="admin.js"></script>
 </body>
 </html>
