--- a/in/index.html
+++ b/in/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Admin Redirect - SKATWIN</title>
+  <title>Admin Redirect</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -21,7 +21,7 @@
 
     <!-- App Section -->
     <section id="app" class="card" style="display:none;">
-      <h2>Kelola Link Alternatif</h2>
+      <h2>Kelola Link Alternatif - SKATWIN</h2>
 
       <div class="add-row">
         <input id="newLabel" placeholder="Nama label..." />
