--- a/in/index.html
+++ b/in/index.html
@@ -13,7 +13,7 @@
   <main>
     <!-- Login Section -->
     <section id="login" class="card">
-      <h1>Admin Redirect</h1>
+      <h1>Login</h1>
       <input id="user" placeholder="Username" type="text" />
       <input id="pass" placeholder="Password" type="password" />
       <button id="btnLogin" class="btn">Login</button>
