--- a/in/index.html
+++ b/in/index.html
@@ -1,55 +1,123 @@
 <!doctype html>
 <html lang="id">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>skatwin-alternatif-pages-dev</title>
-
-
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-<script defer src="/in/admin.js"></script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Admin Redirect</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --orange:darkorange; --orange-dark:darkorange; --text:#333; --bg:#fff;
+      --input-bg:#f9f9f9; --border:#e6e6e6; --muted:#868e96;
+    }
+    *{box-sizing:border-box;font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+    body{margin:0;background:var(--bg);color:var(--text);min-height:100vh;display:flex;align-items:center;justify-content:center}
+    main{width:95%;max-width:940px}
+    .card{background:#fff;padding:24px;border-radius:16px;box-shadow:0 8px 28px rgba(0,0,0,.06)}
+    h1,h2{margin:0 0 12px;color:var(--orange-dark)}
+    .hint{font-size:13px;color:var(--muted);text-align:center;margin-top:10px}
+    input{width:100%;padding:12px 14px;margin:.45rem 0;border:1px solid var(--border);border-radius:10px;background:var(--input-bg)}
+    input:focus{outline:none;border-color:var(--orange);box-shadow:0 0 0 3px rgba(255,179,71,.25)}
+    .btn{background:linear-gradient(135deg,var(--orange),var(--orange-dark));color:#fff;border:0;padding:10px 14px;border-radius:10px;font-weight:600;cursor:pointer;transition:.2s}
+    .btn:hover{transform:translateY(-1px);box-shadow:0 6px 16px rgba(255,179,71,.35)}
+    .topbar{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;gap:12px}
+    .top-actions{display:flex;gap:8px}
+    .btn-logout,.btn-alt{background:#fff;color:var(--orange-dark);border:2px solid var(--orange-dark)}
+    .btn-logout:hover,.btn-alt:hover{background:var(--orange-dark);color:#fff}
+    .add-row{display:flex;gap:8px;margin:10px 0 6px}
+    table{width:100%;border-collapse:collapse}
+    thead th{background:var(--orange);color:#fff;padding:10px;border:0}
+    td{padding:8px;border-bottom:1px solid #f0f0f0}
+    td input{margin:0}
+    /* toast */
+    .toastbox{position:fixed;right:16px;bottom:16px;display:flex;flex-direction:column;gap:10px;z-index:9999}
+    .toast{background:#fff;color:var(--text);border-left:6px solid var(--orange-dark);padding:12px 14px;border-radius:10px;box-shadow:0 10px 22px rgba(0,0,0,.12);min-width:240px;animation:slideIn .25s ease both}
+    .toast.ok{border-left-color:#22c55e}.toast.err{border-left-color:#ef4444}
+    @keyframes slideIn{from{transform:translateY(8px);opacity:0}to{transform:translateY(0);opacity:1}}
+  </style>
 </head>
 <body>
-<main>
-<!-- Login Section -->
-<section id="login" class="card">
-<h1>LOGIN</h1>
-<input id="user" placeholder="Username" type="text" />
-<input id="pass" placeholder="Password" type="password" />
-<button id="btnLogin" class="btn">Login</button>
-</section>
+  <main>
+    <!-- LOGIN -->
+    <section id="login" class="card">
+      <h1>Admin Redirect</h1>
+      <input id="user" placeholder="Username" type="text"/>
+      <input id="pass" placeholder="Password" type="password"/>
+      <button id="btnLogin" class="btn">Login</button>
+      <p class="hint">Gunakan kredensial admin dari Environment Variables.</p>
+    </section>
 
+    <!-- APP -->
+    <section id="app" class="card" style="display:none;">
+      <div class="topbar">
+        <h2>Kelola Link Alternatif</h2>
+        <div class="top-actions">
+          <a class="btn btn-alt" href="/alternatif" target="_blank" rel="noopener">Cek Redirect</a>
+          <button id="btnLogout" class="btn btn-logout">Logout</button>
+        </div>
+      </div>
 
-<!-- App Section -->
-<section id="app" class="card" style="display:none;">
-<div class="topbar">
-<h2>Kelola Link Alternatif</h2>
-<div class="top-actions">
-<a class="btn btn-alt" href="/alternatif" target="_blank" rel="noopener">Cek Redirect</a>
-<button id="btnLogout" class="btn btn-logout">Logout</button>
-</div>
-</div>
+      <div class="add-row">
+        <input id="newLabel" placeholder="Nama label…"/>
+        <input id="newUrl" placeholder="https://example.com"/>
+        <button id="btnAdd" class="btn">Tambah</button>
+      </div>
 
+      <table id="tbl">
+        <thead><tr><th>Label</th><th>URL</th><th style="width:170px">Aksi</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </section>
+  </main>
 
-<div class="add-row">
-<input id="newLabel" placeholder="Nama label" />
-<input id="newUrl" placeholder="Gunakan ( https:// )" />
-<button id="btnAdd" class="btn">Tambah</button>
-</div>
+  <div id="toastbox" class="toastbox" aria-live="polite" aria-atomic="true"></div>
 
+<script>
+document.addEventListener('click', async (e) => {
+  const b = e.target.closest('button');
+  if (!b) return;
 
-<table id="tbl">
-<thead>
-<tr><th>Label</th><th>URL</th><th style="width:170px">Aksi</th></tr>
-</thead>
-<tbody></tbody>
-</table>
-</section>
-</main>
+  const id  = b.getAttribute('data-id');
+  const act = b.getAttribute('data-act');
 
+  if (act === 'save') {
+    const url   = document.querySelector(`input[data-k="url"][data-id="${id}"]`).value.trim();
+    const label = document.querySelector(`input[data-k="label"][data-id="${id}"]`).value.trim();
 
-<!-- Toast container -->
-<div id="toastbox" class="toastbox" aria-live="polite" aria-atomic="true"></div>
+    if (url && !/^https?:\/\/.+/i.test(url)) {
+      toast('URL harus http(s)://', 'err');
+      return;
+    }
+
+    const { data } = await updLink(id, url, label);
+    if (!data || !data.ok) {
+      toast((data && data.error) || 'Gagal menyimpan', 'err');
+      return;
+    }
+    toast('Perubahan disimpan');
+    refresh();
+  } else if (act === 'del') {
+    if (!confirm('Hapus link ini?')) return;
+
+    const { data } = await delLink(id);
+    if (!data || !data.ok) {
+      toast((data && data.error) || 'Gagal menghapus', 'err');
+      return;
+    }
+    toast('Link dihapus');
+    refresh();
+  }
+});
+
+// auto-render jika masih login
+window.addEventListener('load', () => {
+  if (checkSession()) {
+    loginBox.style.display = 'none';
+    appBox.style.display   = 'block';
+    refresh();
+  }
+});
+</script>
+
 </body>
 </html>
